--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,2 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-
-# Environments
-.env
-.*venv
-
-journal.md
+# Dependency directories
+node_modules/
